matrix structure in JS, grid 3x3

--- a/index.html
+++ b/index.html
@@ -29,20 +29,20 @@
 
         <!--matrix game-->
         <div class="ia-matrix-game">
-            <div class="ia-matrix-game__row-box">
-                <div class="ia-matrix-game__cell-box"></div>
-                <div class="ia-matrix-game__cell-box"></div>
-                <div class="ia-matrix-game__cell-box"></div>
+            <div>
+                <div class="js-matrix-02 ia-matrix-game__cell-box"></div>
+                <div class="js-matrix-12 ia-matrix-game__cell-box"></div>
+                <div class="js-matrix-22 ia-matrix-game__cell-box"></div>
             </div>
-            <div class="ia-matrix-game__row-box">
-                <div class="ia-matrix-game__cell-box ia-matrix-game__cell--fill ia-matrix-game__cell--circle"></div>
-                <div class="ia-matrix-game__cell-box"></div>
-                <div class="ia-matrix-game__cell-box"></div>
+            <div>
+                <div class="js-matrix-01 ia-matrix-game__cell-box ia-matrix-game__cell--fill ia-matrix-game__cell--circle"></div>
+                <div class="js-matrix-11 ia-matrix-game__cell-box"></div>
+                <div class="js-matrix-21 ia-matrix-game__cell-box"></div>
             </div>
-            <div class="ia-matrix-game__row-box">
-                <div class="ia-matrix-game__cell-box"></div>
-                <div class="ia-matrix-game__cell-box"></div>
-                <div class="ia-matrix-game__cell-box ia-matrix-game__cell--fill ia-matrix-game__cell--cross"></div>
+            <div>
+                <div class="js-matrix-00 ia-matrix-game__cell-box"></div>
+                <div class="js-matrix-10 ia-matrix-game__cell-box"></div>
+                <div class="js-matrix-20 ia-matrix-game__cell-box ia-matrix-game__cell--fill ia-matrix-game__cell--cross"></div>
             </div>
         </div>
     </main>
