--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
         </div>
     </footer>
 </div>
+<script src="./js/prototype.matrix.js"></script>
 <script src="./js/main.js"></script>
 </body>
 </html>
