--- a/index.html
+++ b/index.html
@@ -2,15 +2,16 @@
 <html>
 <head lang="en">
     <meta charset="UTF-8">
-    <script src="./bower_components/modernizer/modernizr.js"></script>
     <link rel="shortcut icon" href="./images/cross.gif">
-    <link rel="stylesheet" href="./bower_components/normalize-css/normalize.css"/>
-    <link rel="stylesheet" href="./css/main.css"/>
     <title>Inteligencia artificial: juego tres en ralla</title>
-    <link rel="stylesheet" href="./bower_components/material-design-lite/material.min.css">
     <script src="./bower_components/material-design-lite/material.min.js"></script>
+    <script src="./bower_components/modernizer/modernizr.js"></script>
+    <script src="./bower_components/lodash/lodash.min.js"></script>
+    <link rel="stylesheet" href="./bower_components/normalize-css/normalize.css"/>
+    <link rel="stylesheet" href="./bower_components/material-design-lite/material.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Roboto:300,400,500,700" type="text/css">
+    <link rel="stylesheet" href="./css/main.css"/>
 </head>
 <body>
 <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
@@ -30,19 +31,19 @@
         <!--matrix game-->
         <div class="ia-matrix-game">
             <div>
-                <div class="js-matrix-02 ia-matrix-game__cell-box"></div>
-                <div class="js-matrix-12 ia-matrix-game__cell-box"></div>
-                <div class="js-matrix-22 ia-matrix-game__cell-box"></div>
+                <div class="ia-matrix-game__cell-box js-matrix-02"></div>
+                <div class="ia-matrix-game__cell-box js-matrix-12"></div>
+                <div class="ia-matrix-game__cell-box js-matrix-22"></div>
             </div>
             <div>
-                <div class="js-matrix-01 ia-matrix-game__cell-box ia-matrix-game__cell--fill ia-matrix-game__cell--circle"></div>
-                <div class="js-matrix-11 ia-matrix-game__cell-box"></div>
-                <div class="js-matrix-21 ia-matrix-game__cell-box"></div>
+                <div class="ia-matrix-game__cell-box js-matrix-01"></div>
+                <div class="ia-matrix-game__cell-box js-matrix-11"></div>
+                <div class="ia-matrix-game__cell-box js-matrix-21"></div>
             </div>
             <div>
-                <div class="js-matrix-00 ia-matrix-game__cell-box"></div>
-                <div class="js-matrix-10 ia-matrix-game__cell-box"></div>
-                <div class="js-matrix-20 ia-matrix-game__cell-box ia-matrix-game__cell--fill ia-matrix-game__cell--cross"></div>
+                <div class="ia-matrix-game__cell-box js-matrix-00"></div>
+                <div class="ia-matrix-game__cell-box js-matrix-10"></div>
+                <div class="ia-matrix-game__cell-box js-matrix-20"></div>
             </div>
         </div>
     </main>
