--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
     <script src="./bower_components/lodash/lodash.min.js"></script>
     <link rel="stylesheet" href="./bower_components/normalize-css/normalize.css"/>
     <link rel="stylesheet" href="./bower_components/material-design-lite/material.min.css">
+    <!-- TODO implement require
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-    <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Roboto:300,400,500,700" type="text/css">
+    <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Roboto:300,400,500,700" type="text/css">-->
     <link rel="stylesheet" href="./css/main.css"/>
 </head>
 <body>
