set random turns, change board UX

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <div class="mdl-layout-spacer"></div>
             <nav class="mdl-navigation mdl-layout--large-screen-only">
                 <a class="mdl-navigation__link"
-                   href="https://github.com/fernandoPalaciosGit/ia-tictactoe-game" target="_blank   ">Fork me in Github</a>
+                   href="https://github.com/fernandoPalaciosGit/ia-tictactoe-game" target="_blank">Fork me in Github</a>
             </nav>
         </div>
     </header>
@@ -58,6 +58,7 @@
         </div>
     </footer>
 </div>
+<script src="./js/prototype.smart.js"></script>
 <script src="./js/prototype.matrix.js"></script>
 <script src="./js/main.js"></script>
 </body>
