--- a/index.html
+++ b/index.html
@@ -31,19 +31,19 @@
         <!--matrix game-->
         <div class="ia-matrix-game">
             <div>
-                <div class="ia-matrix-game__cell-box js-matrix-02"></div>
-                <div class="ia-matrix-game__cell-box js-matrix-12"></div>
-                <div class="ia-matrix-game__cell-box js-matrix-22"></div>
+                <div data-cell-grid="02" class="ia-matrix-game__cell-box js-matrix-02"></div>
+                <div data-cell-grid="12" class="ia-matrix-game__cell-box js-matrix-12"></div>
+                <div data-cell-grid="22" class="ia-matrix-game__cell-box js-matrix-22"></div>
             </div>
             <div>
-                <div class="ia-matrix-game__cell-box js-matrix-01"></div>
-                <div class="ia-matrix-game__cell-box js-matrix-11"></div>
-                <div class="ia-matrix-game__cell-box js-matrix-21"></div>
+                <div data-cell-grid="01" class="ia-matrix-game__cell-box js-matrix-01"></div>
+                <div data-cell-grid="11" class="ia-matrix-game__cell-box js-matrix-11"></div>
+                <div data-cell-grid="21" class="ia-matrix-game__cell-box js-matrix-21"></div>
             </div>
             <div>
-                <div class="ia-matrix-game__cell-box js-matrix-00"></div>
-                <div class="ia-matrix-game__cell-box js-matrix-10"></div>
-                <div class="ia-matrix-game__cell-box js-matrix-20"></div>
+                <div data-cell-grid="00" class="ia-matrix-game__cell-box js-matrix-00"></div>
+                <div data-cell-grid="10" class="ia-matrix-game__cell-box js-matrix-10"></div>
+                <div data-cell-grid="20" class="ia-matrix-game__cell-box js-matrix-20"></div>
             </div>
         </div>
     </main>
