create Player prototype, use main.js as controller game

--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
     </footer>
 </div>
 <script src="./js/prototype.smart.js"></script>
+<script src="./js/prototype.player.js"></script>
 <script src="./js/prototype.matrix.js"></script>
 <script src="./js/main.js"></script>
 </body>
