delayed game, played by machine

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         </div>
     </header>
 
-    <main class="ia-wrapper-matrix">
+    <main class="ia-matrix-wrapper">
         <div class="ia-matrix-game">
             <div>
                 <div data-cell-grid="02" class="ia-matrix-game__cell-box js-matrix-02"></div>
@@ -44,8 +44,9 @@
                 <div data-cell-grid="20" class="ia-matrix-game__cell-box js-matrix-20"></div>
             </div>
         </div>
-    </main>
 
+        <div id="waiting-game" class="mdl-progress mdl-js-progress mdl-progress__indeterminate"></div>
+    </main>
     <footer class="mdl-mini-footer">
         <div class="mdl-mini-footer__left-section">
             <div class="mdl-logo">Title</div>
