create stroke lines for row and columns winner game lines

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <main class="ia-matrix-wrapper">
         <div id="waiting-game" class="mdl-progress mdl-js-progress mdl-progress__indeterminate"></div>
 
-        <div class="ia-matrix-game">
+        <div class="ia-matrix-game ia-matrix-game--match-row-0">
             <div>
                 <div data-cell-grid="02" class="ia-matrix-game__cell-box js-matrix-02"></div>
                 <div data-cell-grid="12" class="ia-matrix-game__cell-box js-matrix-12"></div>
