--- a/index.html
+++ b/index.html
@@ -5,10 +5,12 @@
     <link rel="shortcut icon" href="./images/cross.gif">
     <title>Inteligencia artificial: juego tres en ralla</title>
     <script src="./bower_components/material-design-lite/material.min.js"></script>
+    <script src="./bower_components/mdl-selectfield/mdl-selectfield.min.js"></script>
     <script src="./bower_components/modernizer/modernizr.js"></script>
     <script src="./bower_components/lodash/lodash.min.js"></script>
     <link rel="stylesheet" href="./bower_components/normalize-css/normalize.css"/>
     <link rel="stylesheet" href="./bower_components/material-design-lite/material.min.css">
+    <link rel="stylesheet" href="./bower_components/mdl-selectfield/mdl-selectfield.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Roboto:300,400,500,700">
     <link rel="stylesheet" href="./css/main.css"/>
@@ -49,33 +51,34 @@
     </main>
 
     <form id="config-game-actions" action="#">
-        <p>
-            <label for="playerStarter">¿Who start first?</label>
-            <select name="playerStarter" id="playerStarter" required>
+        <div class="mdl-selectfield mdl-js-selectfield mdl-selectfield--floating-label">
+            <label class="mdl-selectfield__label" for="playerStarter">¿Who start first?</label>
+            <select name="playerStarter" id="playerStarter" required class="mdl-selectfield__select">
                 <option value="" disabled selected></option>
                 <option value="human">yourself</option>
                 <option value="machine">the android inside machine</option>
             </select>
-        </p>
-        <p>
-            <label for="playerChip">Your brand identity</label>
-            <select name="playerChip" id="playerChip" required>
+        </div>
+
+        <div class="mdl-selectfield mdl-js-selectfield mdl-selectfield--floating-label">
+            <label class="mdl-selectfield__label" for="playerChip">Your brand identity</label>
+            <select name="playerChip" id="playerChip" required class="mdl-selectfield__select">
                 <option value="" disabled selected></option>
                 <option value="circle">O</option>
                 <option value="cross">X</option>
             </select>
-        </p>
+        </div>
 
         <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
             <input class="mdl-textfield__input" type="text" name="playerGrunt" id="playerGrunt" required/>
             <label class="mdl-textfield__label" for="playerGrunt">Your Shout of victory</label>
         </div>
 
-        <p>
+        <div>
             <button class="js-submit-config-game mdl-button mdl-js-button mdl-button--raised mdl-button--colored mdl-js-ripple-effect">
                 Init Game
             </button>
-        </p>
+        </div>
     </form>
 
     <div class="demo-card-image mdl-card mdl-shadow--2dp">
