--- a/index.html
+++ b/index.html
@@ -17,13 +17,16 @@
 </head>
 <body>
 <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
-    <header class="mdl-layout__header">
+    <header class="ia-header-wrapper mdl-layout__header">
         <div class="mdl-layout__header-row">
             <span class="mdl-layout-title">Juego tres en ralla</span>
             <div class="mdl-layout-spacer"></div>
-            <nav class="mdl-navigation mdl-layout--large-screen-only">
+            <nav class="mdl-navigation">
                 <a class="mdl-navigation__link"
-                   href="https://github.com/fernandoPalaciosGit/ia-tictactoe-game" target="_blank">Fork me in Github</a>
+                   href="https://github.com/fernandoPalaciosGit/ia-tictactoe-game" target="_blank">
+                    <span class="mdl-layout--large-screen-only">Fork me in Github</span>
+                    <i class="material-icons mdl-layout--small-screen-only">share</i>
+                </a>
             </nav>
         </div>
     </header>
