create check manager for return aviability of IA machine

--- a/index.html
+++ b/index.html
@@ -121,6 +121,7 @@
 </div>
 <script src="./js/prototype.player.js"></script>
 <script src="./js/prototype.matrix.js"></script>
+<script src="./js/factory.checkManager.js"></script>
 <script src="./js/main.js"></script>
 </body>
 </html>
