Create custom Event to play turn

--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
                 <label class="mdl-selectfield__label" for="playerStarter">¿Who start first?</label>
                 <select name="playerStarter" id="playerStarter" required class="mdl-selectfield__select">
                     <option value="" disabled selected></option>
-                    <option value="human">yourself</option>
-                    <option value="machine">the android inside machine</option>
+                    <option value="human">Yourself</option>
+                    <option value="machine">The android</option>
                 </select>
             </div>
         </div>
