Create Utils factory for interfaces shared by modules, migrate play custom event

--- a/index.html
+++ b/index.html
@@ -119,6 +119,7 @@
         </div>
     </footer>
 </div>
+<script src="./js/factory.utils.js"></script>
 <script src="./js/prototype.player.js"></script>
 <script src="./js/prototype.matrix.js"></script>
 <script src="./js/factory.checkManager.js"></script>
