check cell to complete line, populate play movements by custom event

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head lang="en">
     <meta charset="UTF-8">
     <link rel="shortcut icon" href="./images/cross.gif">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Inteligencia artificial: juego tres en ralla</title>
     <script src="./bower_components/material-design-lite/material.min.js"></script>
     <script src="./bower_components/mdl-selectfield/mdl-selectfield.min.js"></script>
