--- a/index.html
+++ b/index.html
@@ -91,10 +91,10 @@
         </div>
     </form>
 
-    <div class="demo-card-image mdl-card mdl-shadow--2dp">
+    <div class="ia-rules-card mdl-card mdl-shadow--2dp">
         <div class="mdl-card__supporting-text mdl-card--expand">
             <button class="js-show-panel-rules mdl-button mdl-js-button mdl-button--icon mdl-button--colored"
-                    data-toggle-action="close" data-toggle-info-element="config-game-actions">
+                    data-toggle-action="close" data-toggle-info-element="">
                 <i class="material-icons">close</i>
             </button>
 
@@ -107,16 +107,41 @@
         </div>
 
         <div class="mdl-card__actions">
-            <span class="demo-card-image__filename">Juego de tres en Ralla</span>
+            <span class="ia-rules-card__filename">Juego de tres en Ralla</span>
         </div>
     </div>
 
-    <footer class="mdl-mini-footer">
+    <div class="mdl-card mdl-shadow--2dp ia-winner-card">
+        <div class="mdl-card__title mdl-card--expand">
+            <h4>
+                <span class="shout-text"></span>
+            </h4>
+        </div>
+        <div class="mdl-card__actions mdl-card--border">
+            <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect ia-refresh-game"
+                data-refresh-action="continueGame"
+                data-refresh-gamer="">
+                Continue
+            </a>
+            <div class="mdl-layout-spacer"></div>
+            <i class="material-icons">autorenew</i>
+        </div>
+    </div>
+
+    <footer class="ia-main-footer mdl-mini-footer">
         <div class="mdl-mini-footer__left-section">
             <div class="mdl-logo">
                 <a class="js-show-panel-rules mdl-color-text--white" href="#"
-                   data-toggle-action="open" data-toggle-info-element="config-game-actions" >Reglas de Juego</a>
+                   data-toggle-action="open" data-toggle-info-element="" >Reglas de Juego</a>
             </div>
+        </div>
+
+        <div class="mdl-mini-footer__right-section hide-pannel ia-reset-game-wrapper">
+            <button class="ia-refresh-game mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent"
+                    data-refresh-action="resetGame"
+                    data-refresh-gamer="">
+                Reset game
+            </button>
         </div>
     </footer>
 </div>
