Badgets to winner counter

--- a/index.html
+++ b/index.html
@@ -91,6 +91,20 @@
         </div>
     </form>
 
+    <div class="ia-gamer-badges hide-pannel">
+        <div class="snippet-demo">
+            <div class="snippet-demo-container demo-badge demo-badge__badge-on-icon-text">
+                <span class="material-icons mdl-badge" data-gamer-name="human" data-badge="0">face</span>
+            </div>
+        </div>
+
+        <div class="snippet-demo">
+            <div class="snippet-demo-container demo-badge demo-badge__badge-on-icon-text">
+                <span class="material-icons mdl-badge" data-gamer-name="machine" data-badge="0">android</span>
+            </div>
+        </div>
+    </div>
+
     <div class="ia-rules-card mdl-card mdl-shadow--2dp">
         <div class="mdl-card__supporting-text mdl-card--expand">
             <button class="js-show-panel-rules mdl-button mdl-js-button mdl-button--icon mdl-button--colored"
@@ -99,10 +113,10 @@
             </button>
 
             <ul>
-                <li>Un jugador tiene como maximo 3 casillas activas.</li>
-                <li>Al tercer turno se debe sustituir una casilla ocupada por otra vacia.</li>
+                <li>Un jugador tiene como máximo 3 casillas activas.</li>
+                <li>Al tercer turno se debe sustituir una casilla ocupada por otra vacía.</li>
                 <li>No se puede repetir turno sobre la casilla descartada anteriormente.</li>
-                <li>Gana el jugador que antes consifga 3 casillas alineadas.</li>
+                <li>Gana el jugador que antes consiga 3 casillas alineadas.</li>
             </ul>
         </div>
 
