block or complete diagonal on machine turn

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
     <header class="ia-header-wrapper mdl-layout__header">
         <div class="mdl-layout__header-row">
-            <span class="mdl-layout-title">Juego tres en ralla</span>
+            <span class="mdl-layout-title">Tic Tae Toe Game</span>
             <div class="mdl-layout-spacer"></div>
             <nav class="mdl-navigation">
                 <a class="mdl-navigation__link"
