load twitter button, order css, linter rules

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
     <header class="ia-header-wrapper mdl-layout__header">
         <div class="mdl-layout__header-row">
-            <span class="mdl-layout-title">Tic Tae Toe Game</span>
+            <span class="mdl-layout-title">Tic Tac Toe Game</span>
             <div class="mdl-layout-spacer"></div>
             <nav class="mdl-navigation">
                 <a class="mdl-navigation__link"
@@ -148,6 +148,8 @@
             </div>
         </div>
 
+        <div id="twitter-share-button" class="hide-pannel"></div>
+
         <div class="mdl-mini-footer__right-section hide-pannel ia-reset-game-wrapper">
             <button class="ia-refresh-game mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent"
                     data-refresh-action="resetGame"
@@ -157,6 +159,7 @@
         </div>
     </footer>
 </div>
+<script src="js/vendors/twitter.js"></script>
 <script src="./js/factory.utils.js"></script>
 <script src="./js/prototype.player.js"></script>
 <script src="./js/prototype.matrix.js"></script>
